Comment out volumes configuration in Docker Compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./src:/usr/src/app
+    # volumes:
+    #   - ./src:/usr/src/app
     environment:
       NODE_ENV: production
     restart: always
